# memsave_torch

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  collect_results.py  estimate.py  get_best_results.py  makefile  measurements.py  models.py  paper_demo.py  pyproject.toml  requirements.txt  ruff.toml  rundemo.py
.github/workflows/: pytest.yml  ruff.yml
docs_src/: 404.rst  basic_usage.rst  conf.py  index.rst  requirements.txt
docs_src/_build/: .buildinfo  basic_usage.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs_src/_ext/: dict2table.py
docs_src/_static/: autoscroll.js  style.css
docs_src/_templates/: repo-stats-custom.html  sidebar_logo.html  torch_module_extension.rst
docs_src/api/: index.rst  nn.rst
experiments/: best_results_to_latex.py  get_best_results.py  paper_demo.py  poster_barplot.py  resnet_best_results_to_latex.py  writeup.md
experiments/exp01_llm_finetuning/: __init__.py  run.py
experiments/util/: __init__.py  collect_results.py  estimate.py  measurements.py  models.py  visualize_graph.py  visualize_graph_elementary.py
experiments/visual_abstract/: .gitignore  README.md  gather_data.py  generate_data.py  mwe.py  plot_data.py  run.py
memsave/: BatchNorm.py  Conv2d.py  LayerNorm.py  MaxPool.py  ReLU.py  __init__.py
memsave_torch/: __init__.py  get_best_results.py  paper_demo.py  rundemo.py
memsave_torch/memsave_torch.egg-info/: PKG-INFO
memsave_torch/nn/: BatchNorm.py  Conv1d.py  Conv2d.py  Conv3d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  Dropout.py  LayerNorm.py  Linear.py  MaxPool.py  ReLU.py  __init__.py
memsave_torch/util/: collect_results.py  estimate.py  measurements.py  models.py
test/: test_layers.py  test_layers_cases.py  test_utils.py
(+1652 files in other folders)
