[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "memsave_torch"
version = "1.0.0"
dependencies = [
  "torch"
]
requires-python = ">=3.8"
authors = [
  {name = "Samarth Bhatia", email = "plutonium.239.811@gmail.com"},
  {name = "Felix Dangel", email="fdangel@vectorinstitute.ai"},
]
description = "Saving Memory in PyTorch"
readme = "README.md"
keywords = ["PyTorch", "Deep Learning", "Memory Efficient", "Memory Saving", "torch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License"
]

[project.urls]
Repository = "https://github.com/plutonium-239/memsave_torch"

[project.optional-dependencies]
test = [
  'coveralls',
  'pytest',
  'pytest-cov',
  'pytest-optional-tests',
]

[tool.pytest.ini_options]
markers = [
  "quick: marks tests as quick (only run on make test or using pytest -m quick)",
]